--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -168,7 +168,7 @@
 
                             </h4>
                             <div class="p-b-10">
-                                <div class="rating-count" th:id="${hotel.id}" value="hotel">
+                                <div class="rating-count get-itemid" th:id="${hotel.id}" value="hotel">
                                     尚無評論
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
 
                                 <div class="col-9 respon6-next">
                                     <div class="rs1-select2 bor8 bg0">
-                                        <input type="date" name="date" class="form-control">
+                                        <input type="date" name="date" class="form-control get-date">
                                         <div class="dropDownSelect2"></div>
                                     </div>
                                 </div>
@@ -216,7 +216,7 @@
                                         <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
                                             <i class="fs-16 zmdi zmdi-minus"></i>
                                         </div>
-                                        <input class="mtext-104 cl3 txt-center num-product" type="number"
+                                        <input class="mtext-104 cl3 txt-center num-product  get-qty" type="number"
                                                name="num-product"
                                                value="1">
                                         <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
@@ -226,7 +226,7 @@
 
                                 </div>
                             </div>
-                            <button class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+                            <button class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 plus-cart">
                                 加入購物車
                             </button>
                         </div>
@@ -935,6 +935,63 @@
         <div th:replace="frontend/partials/fragment :: script"></div>
 
     </tr>
+<!--    購物車script -->
+    <script>
+    
+	$(document).on('click','.plus-cart',function(){
+		let	itemId = $('.get-itemid').attr('id');
+		let type = 'hotel';
+		let qty = $('.get-qty').val();
+		let date = $('.get-date').val();
+		console.log(itemId + "  " + date)
+			 $.ajax({
+		            type: 'GET',
+		            url: '/gotrip/addToCart',
+		            data:{
+		            	productId: itemId,
+		            	type: type,
+		            	qty: qty,
+		            	date: date
+		            	},
+		            dataType: 'json',
+		            async:false,
+		            success: function (data) {
+		     	
+		                console.log(data.itemNumber);	
+		                
+		                $('#cartIcon').attr("data-notify",data.itemNumber);
+		                console.log('data' + data.itemNumber)   
+		                Swal.fire({
+		                	  position: 'center',
+		                	  icon: 'success',
+		                	  title: '已加入購物車',
+		                	  showConfirmButton: false,
+		                	  timer: 1500
+		                	});
+		            },
+		    		error: function(jqXHR,textStatus,errorThrown,data) {
+		    			 console.log(data)
+						console.log(jqXHR);
+						console.log(textStatus); 
+						console.log(jqXHR.responseText);
+					}
+		                	                
+		});		
+		});
+	//	  input number的增加.減少JS
+	//  [ +/- num product ]*/
+		   $(document).on('click','.btn-num-product-down' ,function(){
+		       var numProduct = Number($(this).next().val());
+		       if(numProduct > 1) $(this).next().val(numProduct - 1);
+		   });
+		   
+		   $(document).on('click','.btn-num-product-up', function(){
+		       var numProduct = Number($(this).prev().val());
+		       if(numProduct < 99) $(this).prev().val(numProduct + 1);
+		   });
+    </script>
+    
+    
 </body>
 
 <!--<script>-->
