--- a/src/main/resources/static/css/ticketTableStyle/jquery.skidder.css
+++ b/src/main/resources/static/css/ticketTableStyle/jquery.skidder.css
@@ -1,4 +1,5 @@
-/*VISIBLE AREA*/
+VISIBLE AREA
+
 .skidder-viewport {
   position: relative;
 	overflow: hidden;
@@ -22,22 +23,22 @@
   transition: opacity 0.2s ease-in-out;
 }
 
-.skidder-viewport.skidder-fade .skidder-wrapper {
+/* .skidder-viewport.skidder-fade .skidder-wrapper {
   width: auto;
   margin: 0 auto;
-}
+} */
 
 .skidder-viewport.skidder-fade .skidder-wrapper .skidder-slide {
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
 /*active style*/
-.skidder-viewport .skidder-wrapper .skidder-slide.active,
+/* .skidder-viewport .skidder-wrapper .skidder-slide.active,
 .skidder-viewport .skidder-wrapper .skidder-slide.disengage {
   opacity: 1;
   box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
   z-index: 1;
-}
+} */
 
 /*CLICKABLE AREA FOR LEFT-RIGHT MOVEMENT*/
 .skidder-viewport .skidder-clickwrapper {
@@ -111,7 +112,7 @@
   box-sizing: border-box;
   cursor: pointer;
   float: left;
-  /*weström style*/
+
   height: 12px;
   width: 12px;
   margin-right: 8px;
