--- a/src/main/resources/templates/backend/ticketInput.html
+++ b/src/main/resources/templates/backend/ticketInput.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GoTrip後台管理</title>
 <!-- 通用css樣式 plugins:css -->
+<link rel="stylesheet" th:href="@{/vendors/bootstrap/css/bootstrap.min.css}" href="vendors/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css">
 <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
 <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
@@ -14,12 +15,13 @@
 <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
 <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
 <!-- TABLE -->
-<link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.css}">
-<link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.table.css}">
-<link rel="stylesheet" th:href="@{/css/ticketTableStyle/jstable.css}">
+<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.css}"> -->
+<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.table.css}"> -->
+<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/jstable.css}"> -->
 
 <!-- Place favicon.ico in the root directory -->
-<link rel="stylesheet" href="css/normalize.css">
+<!-- <link rel="stylesheet" th:href="@{/css/normalize.css}"> -->
+<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 <link rel="stylesheet" th:href="@{/css/ticketTableStyle/main.css}">
 <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/2.2.1/css/bootstrap.min.css">
 <link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap-datetimepicker.min.css}">
@@ -30,6 +32,10 @@
 <!-- <link rel="stylesheet" th:href="@{/css/tickeTableStyle/bootstrap-datetimepicker.min.css}"> -->
 <link rel="stylesheet" type="text/css" th:href="@{/css/ticketTableStyle/mdtimepicker.css}" href="../../static/css/ticketTableStyle/mdtimepicker.css">
 <!-- <link rel="stylesheet" type="text/css" href="assets/css/mdtimepicker.css"> -->
+
+<!--審核icon  -->
+<link rel="stylesheet" type="text/css" th:href="@{/css/ticketTableStyle/font-awesome.min.css}" href="../../static/css/ticketTableStyle/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" th:href="@{/css/ticketTableStyle/elegant-icons.css}" href="../static/css/ticketTableStyle/elegant-icons.css">
 
 <style type="text/css">
 .img-com {
@@ -68,9 +74,9 @@
 						<input type="hidden" th:value="*{ticketNo}" name="ticketNo">
 						
 						<!-- 景點套票名稱、電話 -->
-						<div class="row mt-4">
-						  <div class="col-md-6">
-							<div class="form-group row">
+						<div class="row">
+							<div class="col-md-6">
+							  <div class="form-group row">
 							  <label class="col-sm-3 col-form-label" for="nameId">景點套票名稱</label>
 							  <div class="col-sm-9">
 								<input id="nameId" type="text" class="form-control" name="ticketName" th:field="*{ticketName}" />
@@ -87,8 +93,10 @@
 						  </div>
 						</div>
 
+
+
 						<!-- 開始營業時間、結束營業時間 -->
-						<div class="row">
+						<!-- <div class="row">
 						  <div class="col-md-6">
 							<div class="form-group row">
 							  <label class="col-sm-3 col-form-label" for="openTimeId">開始營業時間</label>
@@ -105,7 +113,7 @@
 							  </div>
 							</div>
 						  </div>
-						</div>
+						</div> -->
 						
 						<!-- 國家\地區、縣市 -->
 						<div class="row">
@@ -219,8 +227,12 @@
 							  <label class="col-sm-3 col-form-label" for="statusId">狀態</label>
 							  <div class="col-sm-9">
 								<select id="status" type="text" class="form-control" name="status" th:field="*{status}" readonly>
-									<option value="上架中">上架中</option>
-									<option value="已上架">已下架</option>
+									 <option th:value="0" th:text="已提交" selected></option>
+							         <option th:value="1" th:text="已審核"></option>
+							         <option th:value="2" th:text="已取消"></option>
+							         <option th:value="3" th:text="不通過"></option>
+<!-- 							         <option th:value="4" th:text="課程完成"></option> -->
+<!-- 							         <option th:value="5" th:text="已評價"></option> -->
 								</select>
 							  </div>
 							</div>
@@ -382,9 +394,13 @@
 	<!-- <script type="text/javascript" src="assets/js/mdtimepicker.js"></script> -->
 	<script th:src="@{/js/ticketTableJS/mdtimepicker.js}" src="../../static/js/ticketTableJS/mdtimepicker.js"></script>
 
-<!-- ckeditor -->
-<script src="//cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
-<!-- <script src="//cdn.ckeditor.com/4.19.0/full/ckeditor.js"></script> -->
+	<!-- ckeditor -->
+	<script src="//cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
+	<!-- <script src="//cdn.ckeditor.com/4.19.0/full/ckeditor.js"></script> -->
+
+	<!-- sweet alert -->
+	<script th:src="@{/js/ticketTableJS/sweetalert2.js}" src="../../static/js/ticketTableJS/sweetalert2.js"></script>
+
 
 <!-- 判斷城市資料後再自動代入地區 -->
 <script th:inline="javascript">
@@ -642,6 +658,8 @@ $('#wrongInput').click(function () {
 			})
 		}
 	</script>
+
+
 </body>
 
 </html>
