--- a/src/main/resources/templates/backend/ticketList.html
+++ b/src/main/resources/templates/backend/ticketList.html
@@ -8,15 +8,23 @@
    <!-- 本頁面使用css樣式 Plugin css for this page -->
    <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
    <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
-   !-- 通用css樣式 plugins:css -->
+   <!-- 通用css樣式 plugins:css -->
    <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css" >
   <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
   <link rel="stylesheet" th:href="@{/vendors/mdi/css/materialdesignicons.min.css}" href="vendors/mdi/css/materialdesignicons.min.css" >
   <link rel="stylesheet" th:href="@{/vendors/css/vendor.bundle.base.css}" href="vendors/css/vendor.bundle.base.css" >
   <link rel="shortcut icon" href="images/favicon.png" />
+  <link rel="shortcut icon" href="images/accept.png" />
+  <link rel="shortcut icon" href="images/failed.png" />
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
-   <style type="text/css">
+  
+ <!--審核icon  -->
+
+<link rel="stylesheet" type="text/css" th:href="@{/css/ticketTableStyle/font-awesome.min.css}" href="../../static/css/ticketTableStyle/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" th:href="@{/css/ticketTableStyle/elegant-icons.css}" href="../../static/css/ticketTableStyle/elegant-icons.css">
+
+ <style type="text/css">
 	.img-com {
 		object-fit: cover;
 		width: 70px;
@@ -78,21 +86,21 @@
                   <div class="table-responsive">
                     <table id="table_id" class="display expandable-table w-100">
                       <colgroup>
-                        <col span="1" style="width: 4%;">
-                        <col span="1" style="width: 12%;">
-                        <col span="1" style="width: 12%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 6%;">
-                        <col span="1" style="width: 4.5%;">
-                        <col span="1" style="width: 4.5%;">
-                        <col span="1" style="width: 4.5%;">
-                        <col span="1" style="width: 13%;">
-                        <col span="1" style="width: 4%;">
-                        <col span="1" style="width: 6%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 8%;">
                         <col span="1" style="width: 5%;">
-                        <col span="1" style="width: 5%;">
+                        <col span="1" style="width: 10%;">
+                        <col span="1" style="width: 10%;">
+                        <col span="1" style="width: 7%;">
+                        <col span="1" style="width: 8%;">
+                        <col span="1" style="width: 8%;">
+                        <col span="1" style="width: 12%;">
+                        <col span="1" style="width: 7%;">
+                        <col span="1" style="width: 7%;">
+                        <col span="1" style="width: 12%;">
+                        <col span="1" style="width: 7%;">
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                         <col span="1" style="width: 5%;"> -->
                       </colgroup>
                       <thead>
 						<tr>
@@ -101,8 +109,8 @@
 							<!-- <th>景點商品說明</th> -->
 							<!-- <th>景點簡介</th> -->
 							<!-- <th>店家營業日期</th> -->
-							<th>店家起始營業時間</th>
-							<th>店家結束營業時間</th>
+							<!-- <th>店家起始營業時間</th> -->
+							<!-- <th>店家結束營業時間</th> -->
 							<th>電話</th>
 							<th>國家/地區</th>
 							<th>城市</th>
@@ -129,8 +137,8 @@
 							<!-- <td th:text="${ticket.ticketBriefIntro}">景點簡介</td> -->
 							<!-- style="width: 150px; height: 60px;" -->
 							<!-- <td th:text="${ticket.ticketOpenWeek}">店家營業日期</td> -->
-							<td th:text="${ticket.ticketOpenTime}" class="font-weight-bold">店家起始營業時間</td>
-							<td th:text="${ticket.ticketEndTime}" class="font-weight-bold">店家結束營業時間</td>
+							<!-- <td th:text="${ticket.ticketOpenTime}" class="font-weight-bold">店家起始營業時間</td> -->
+							<!-- <td th:text="${ticket.ticketEndTime}" class="font-weight-bold">店家結束營業時間</td> -->
 							<td th:text="${ticket.phone}" class="font-weight-bold">電話</td>
 							<td th:text="${ticket.country}" class="font-weight-bold">國家/地區</td>
 							<td th:text="${ticket.city}" class="font-weight-bold">城市</td>
@@ -148,7 +156,39 @@
 								</div>
 							</td> -->
 							<!-- <td th:text="${ticket.newDate}">新增日期</td> -->
-							<td th:text="${ticket.status}" class="font-weight-bold">狀態</td>
+							
+<!-- 							<td th:text="${ticket.status}" class="font-weight-bold">狀態</td> -->
+							<td>
+                                <!-- <span th:if="${ticket.status}==0" >
+                                    <span>已提交&nbsp;</span></br>
+                                    <i class="fas fa-clipboard-check"th:id="${ticket.ticketNo}"
+                                       style="cursor:pointer;"
+                                       th:onclick="|updateState(${ticket.ticketNo},4,'課程是否完成?','')|">&nbsp;課程完成</i>
+                                </span> -->
+                                <span th:if="${ticket.status}==0">
+                                    <span>已提交&nbsp;</span>
+                                    <p></p>
+                                    <i class="fa fa-check-circle"
+                                       style="cursor:pointer;"
+                                       th:onclick="|updateState(${ticket.ticketNo},1,'確認審核通過?','')|">
+                                     </i>
+                                    <i class="fas fa-circle-xmark" th:id="${ticket.ticketNo}"
+                                       style="cursor:pointer;"
+                                       th:onclick="|updateState(${ticket.ticketNo},3,'是否審核不通過?','')|">
+                                    </i>
+<!--                                     <FontAwesomeIcon icon="fa-brands fa-weixin" /> -->
+                                </span>
+                                <span th:if="${ticket.status}==1" th:text="已審核"></span>
+                                <span th:if="${ticket.status}==3" th:text="不通過"></span>
+                                <!-- <span th:if="${ticket.status}==4">
+                                    <span>課程完成&nbsp</span></br>
+                                    <i class="fas fa-comment"th:id="${ticket.ticketNo}"
+                                       style="cursor:pointer;"
+                                       onclick="statusOkAjax(this.ticketNo)">&nbsp;評價</i>
+                                </span>
+                                <span th:if="${register.status}==5" th:text="已評價"></span> -->
+                            </td>
+
 							<!-- 編輯、刪除 -->
 							<td><a href="#"	th:href="@{/ticketList/{ticketNo}/ticketInput(ticketNo=${ticket.ticketNo})}">更新</a>&nbsp;<br>
 								<a href="#" th:href="@{/ticketList/{ticketNo}/delete(ticketNo=${ticket.ticketNo})}" onclick="javascript:return del();">删除</a>
@@ -167,9 +207,9 @@
 								<th>景點名稱</th>
 								<th>景點商品說明</th>
 								<th>景點簡介</th>
-								<th>店家營業日期</th>
-								<th>店家起始營業時間</th>
-								<th>店家結束營業時間</th>
+<!-- 								<th>店家營業日期</th> -->
+<!-- 								<th>店家起始營業時間</th> -->
+<!-- 								<th>店家結束營業時間</th> -->
 								<th>電話</th>
 								<th>國家/地區</th>
 								<th>城市</th>
@@ -193,9 +233,9 @@
 								<td th:text="${ticket.ticketName}">景點名稱</td>
 								<td th:text="${ticket.ticketIntro}">景點商品說明</td>
 								<td th:text="${ticket.ticketBriefIntro}">景點簡介</td>
-								<td th:text="${ticket.ticketOpenWeek}">店家營業日期</td>
-								<td th:text="${ticket.ticketOpenTime}">店家起始營業時間</td>
-								<td th:text="${ticket.ticketEndTime}">店家結束營業時間</td>
+<!-- 								<td th:text="${ticket.ticketOpenWeek}">店家營業日期</td> -->
+<!-- 								<td th:text="${ticket.ticketOpenTime}">店家起始營業時間</td> -->
+<!-- 								<td th:text="${ticket.ticketEndTime}">店家結束營業時間</td> -->
 								<td th:text="${ticket.phone}">電話</td>
 								<td th:text="${ticket.country}">國家/地區</td>
 								<td th:text="${ticket.city}">城市</td>
@@ -213,7 +253,18 @@
 										<img th:src="@{${image}}" class="rounded img-com" />
 									</div>
 								</td> -->
-								<td th:text="${ticket.status}" class="font-weight-bold">狀態</td>
+<!-- 								<td th:text="${ticket.status}" class="font-weight-bold">狀態</td> -->
+								<!-- <td class="font-weight-bold" th:switch="${ticket.status}">
+                                <div th:case="0" th:text="提交完成"/>
+                                <div th:case="1" th:text="審核中" />
+                                <div th:case="2" th:text="已取消" />
+                                <div th:case="3" th:text="不通過" />
+                                <div th:case="4" th:text="課程完成"/>
+                                <div th:case="5" th:text="已評價"/>
+								</td>
+                            <span th:if="${ticket.status}==0">
+     						<i class="icon_error-triangle_alt" th:onclick="|updateState(${ticket.ticketNo},1,'確認取消資料?','')|" style="cursor:pointer;">&nbsp;取消</i>
+     						</span> -->
 							</tr>
 						</tbody>
 					</table>
@@ -250,6 +301,8 @@
 
 <!-- CSV JSON Script -->
 <script> let x = new RdataTB('myTable'); </script>
+
+<script th:src="@{/js/ticketTableJS/sweetalert2.js}" src="../../static/js/ticketTableJS/sweetalert2.js"></script>
 
 <!-- TABLE -->
 <script>
@@ -467,6 +520,49 @@ function del() {
   }else{
   return false;
   }
+}
+</script>
+
+<!-- 取消報名 -->
+<script>
+function updateState(ticketNo, status, title, text) {
+ Swal.fire({
+  title: `${title}`,
+  text: `${text}`,
+  icon: 'warning',
+  showCancelButton: true,
+  cancelButtonText: '取消',
+  confirmButtonColor: '#f15e5e',
+  cancelButtonColor: '#ADADAD',
+  confirmButtonText: '確定'
+ }).then((result) => {
+  if (result.isConfirmed) {
+   $.ajax({
+    type: "PUT",
+    url:'/gotrip' + '/ticketList/' + ticketNo + '/' + status,
+    success: function (msg) {
+     Swal.fire(
+      '成功',
+      '',
+      'success'
+     ).then((result) => {
+      if (result.isConfirmed) {
+       location.reload();
+      }
+     })
+    },
+    error: function (msg) {
+     // console.log(msg.status)
+     Swal.fire({
+      icon: 'error',
+      title: '發生錯誤',
+      text: 'HTTP 狀態碼為 ' + msg.status,
+      footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">為什麼會有這個問題?</a>'
+     })
+    }
+   });
+  }
+ })
 }
 </script>
 
