--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -374,7 +374,75 @@
                 <div class="row ">
                     <div class="col-8 border border-1 bg-white rounded">
                         <div class="m-t-10 ">
-
+							<!-- 顧客評論list -->
+							<div>
+								<h3 class="font-weight-bold">顧客評價</h3>
+								<div class="comments-itemId m-5" th:id="${hotel.id}" value="carRental"></div>
+							</div>
+		
+							<!-- Add review -->
+<!-- 							<div> -->
+							
+<!-- 								<form id="insert-loc-form" name="form" action="#" method="post"  -->
+<!-- 										  class="form-horizontal needs-validation" enctype="multipart/form-data"> -->
+<!-- 								<h4 class="font-weight-bold my-3 ml-5">留下你的評論吧!</h4> -->
+<!-- 								<input id="itemTb" name="itemTb" type="hidden" value="carRental"> -->
+<!-- 								<input id="itemId" name="itemId" type="hidden" th:value="${hotel.id}"> -->
+<!-- 								<div class="form-group row ml-5"> -->
+<!-- 									<label class="col-sm-3 col-form-label" for="rating">給予評分</label> -->
+<!-- 									<div class="col-sm-9"> -->
+<!-- 										<fieldset class="starability-basic"> -->
+<!-- 											<input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked/>  -->
+<!-- 											<input type="radio" id="first-rate1" name="rating" value="1" />  -->
+<!-- 											<label for="first-rate1" title="Terrible">1 star</label>  -->
+<!-- 											<input type="radio" id="first-rate2" name="rating" value="2" /> -->
+<!-- 											<label for="first-rate2" title="Not good">2 stars</label> -->
+<!-- 											<input type="radio" id="first-rate3" name="rating" value="3" />  -->
+<!-- 											<label for="first-rate3" title="Average">3 stars</label>  -->
+<!-- 											<input type="radio" id="first-rate4" name="rating" value="4" />  -->
+<!-- 											<label for="first-rate4" title="Very good">4 stars</label>  -->
+<!-- 											<input type="radio" id="first-rate5" name="rating" value="5"/>  -->
+<!-- 											<label for="first-rate5" title="Amazing">5 stars</label> -->
+<!-- 										</fieldset> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 								<div class="form-group row ml-5"> -->
+<!-- 									<div class="col-sm-3"> -->
+<!-- 										<label class="col-form-label pb-1" for="content">評論內容</label> -->
+<!-- 										<div id="content-length" class="text-black-50 small">(0/200)</div> -->
+<!-- 									</div> -->
+<!-- 									<div class="col-sm-9"> -->
+<!-- 									<textarea class="form-control" name="content" id="content" cols="30" rows="5" style="resize: none"></textarea> -->
+<!-- 										<div class="invalid-feedback">評論內容上限200字</div> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 								<div class="form-group row mt-5 ml-5"> -->
+<!-- 									<div class="col-sm-3"> -->
+<!-- 										<label for="images" class="col-form-label pb-1">上傳照片</label> -->
+<!-- 										<div id="images-length" class="text-black-50 small">(0/3)</div> -->
+<!-- 									</div> -->
+<!-- 									<div class="col-sm-9"> -->
+<!-- 										<div class=""> -->
+<!-- 											<input type="file" class="form-control custom-file-input pb-1" style="background-color: white " name="imagefiles" id="imagefiles" multiple> -->
+<!-- 											<div class="invalid-feedback">最多選取3張圖片</div> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
+<!-- 									<div class="col-sm-3"></div> -->
+<!-- 									<div class="col-sm-9"> -->
+<!-- 										<div class="row img-responsive" id="formFile"></div> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 								<div class="d-flex justify-content-end my-3"> -->
+<!-- 									<button id="btn-insert-wrong-com" type="button" class="btn btn-light mr-2 justify-content-end mr-4"> -->
+<!-- 										錯誤輸入 -->
+<!-- 									</button> -->
+<!-- 									<button id="btn-insert-correct-com" type="button" class="btn btn-light mr-2 justify-content-end mr-4"> -->
+<!-- 										正確輸入 -->
+<!-- 									</button> -->
+<!-- 									<button id="btn-insert-com" type="button"class="btn btn-warning">送出評論</button> -->
+<!-- 								</div> -->
+<!-- 								</form> -->
+<!-- 							</div> -->
                         </div>
                     </div>
                     <div class="col-4 border border-1 bg-white rounded">
