--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -27,6 +27,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 p-b-80 bg6">
+<!--              <tr th:each="roomList:${roomList}" > -->
                 <div class="side-menu">
                     <div class="p-t-55">
                         <h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">住宿管理</h2>
@@ -52,6 +53,7 @@
                         </ul>
                     </div>
                 </div>
+<!--                 </tr> -->
             </div>
             <!-- Block2 -->
 
