--- a/src/main/resources/templates/frontend/ticket/ticket-index.html
+++ b/src/main/resources/templates/frontend/ticket/ticket-index.html
@@ -10,7 +10,7 @@
 <div th:replace="frontend/partials/fragment :: cart"></div>
 
 <section class="bg-img1 txt-center p-lr-15 p-tb-92"
-         th:style="'background-image: url(' + @{/images/hotelpic.jpg} + ');'">
+         th:style="'background-image: url(' + @{/images/bg-01.jpg} + ');'">
     <h2 class="ltext-103 font-weight-bold clwhite txt-center">景點門票管理</h2>
 </section>
 <!-- Product 內文 -->
