--- a/src/main/resources/templates/frontend/hotel/EditHotel-form.html
+++ b/src/main/resources/templates/frontend/hotel/EditHotel-form.html
@@ -59,7 +59,7 @@
             <div class="col-md-9 grid-margin my-5 pl-5">
                 <div class="card">
                     <div class="card-body ">
-                        <h4 class="card-title font-weight-bold my-3">新增飯店</h4>
+                        <h4 class="card-title font-weight-bold my-3">修改飯店</h4>
                         <form id="insert-loc-form" name="form" th:action="@{/editHotel}" method="post"
                               th:object="${hotel}"
                               class="form-horizontal needs-validation" enctype="multipart/form-data">
