--- a/src/main/resources/templates/frontend/hotel/NewHotel-form.html
+++ b/src/main/resources/templates/frontend/hotel/NewHotel-form.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="card-body ">
                         <h4 class="card-title font-weight-bold my-3">新增飯店</h4>
-                        <form id="insert-loc-form" name="form" th:action="@{/addHotel}" method="post"
+                        <form id="insert-loc-form" name="form" th:action="@{/frontNewHotel}" method="post"
                               th:object="${hotel}"
                               class="form-horizontal needs-validation" enctype="multipart/form-data">
 
