--- a/src/main/resources/templates/frontend/hotel/hotel-index.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-index.html
@@ -102,14 +102,13 @@
                                                class="btn btn-light btn-rounded btn-sm">
                                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                             </a>
-                                            <form
-                                                    th:action="@{/delete(id=${hotel.id})}"
-                                                    th:method="delete" class="d-inline">
-                                                <button type="button" th:value="${hotel.id}"
-                                                        class="btn btn-delete btn-light btn-rounded btn-sm">
-                                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                                </button>
-                                            </form>
+
+                                            <button class="btn btn-delete btn-light btn-rounded btn-sm"
+                                                    th:onclick="deleteajax([[${hotel.id}]])" type="button"
+                                                    id="deleteajax"><i class="fa fa-trash-o" aria-hidden="true"></i>
+                                            </button>
+
+
                                         </div>
 
                                     <th>
@@ -148,30 +147,55 @@
         src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
 <script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
 <script>
-    $(document).ready(function () {
-        $('#data-table').DataTable({})
-    });
+    (function ($) {
+        $(document).ready(function () {
+            $('#comment-table').DataTable();
+        });
+    })(jQuery);
 
-
-    $(".btn-delete").click(function (e) {
-        e.preventDefault(); // 取消原始動作
-        let id = $(this).val();
+    function deleteajax(id) {
+        console.log(id);
         Swal.fire({
+            title: '請問是否要刪除此訂單?',
+            text: "已刪除的訂單無法復原，請再次確認",
             icon: 'warning',
-            title: '確定刪除?',
-            text: "確認刪除後將不可復原",
             showCancelButton: true,
-            confirmButtonColor: '#FF8D29',
-            cancelButtonColor: '#FFCD38',
-            confirmButtonText: '確認',
             cancelButtonText: '取消',
-            reverseButtons: true
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: '刪除'
         }).then((result) => {
             if (result.isConfirmed) {
-                $(this).parent().submit();
+                $.ajax({
+                    type: "get",
+                    url: "/gotrip/delete/" + id,
+
+                    success: function (msg) {
+                        Swal.fire(
+                            '已刪除!',
+                            '訂單已成功刪除!',
+                            'success'
+                        ).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
+                            }
+                        })
+                    },
+                    error: function (msg) {
+                        // console.log(msg.status)
+                        Swal.fire({
+                            icon: 'error',
+                            title: '發生錯誤',
+                            text: 'HTTP 狀態碼為 ' + msg.status,
+                            footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">怎麼有這錯誤?</a>'
+                        })
+                    }
+                });
+
+
             }
         })
-    })
+    }
 
 </script>
 
